--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 body {
+    padding: 10px;
     font-family: Arial, Helvetica, sans-serif
 }
 
@@ -7,5 +8,39 @@ body {
 }
 
 .main-img {
+    width: 300px;
     box-shadow: 0px 2px 5px lightgray;
+}
+
+.ratings {
+    width: 120px;
+    margin-bottom: 15px;
+}
+
+.metadata {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: left;
+    margin: auto 20px auto 20px;
+    gap: 30px;
+    border: 2px solid rgb(46, 45, 45);
+    padding: 20px;
+}
+
+.book-description {
+    margin-right: auto;
+}
+
+.Link-color{
+    color: #018ba3;
+}
+
+.Link-color:hover{
+    color: #0a4f6d;
+}
+
+.directory-color{
+    color: #565959;
+    font-size: small;
 }
