--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@ body {
 
 .title {
     font-weight: lighter;
+    font-size: 30px;
+   
 }
 
 .main-img {
@@ -21,6 +23,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    width: 970px;
     text-align: left;
     margin: auto 20px auto 20px;
     gap: 30px;
